src/test/resources/test_data/error/twoMainModules.smtx
main module test { }
main module test2 { }